plain-kubernetes-yaml/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebom-backend
  namespace: default
  labels:
    name: rebom-backend
    app: rebom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rebom
      name: rebom-backend
  template:
    metadata:
      labels:
        name: rebom-backend
        app: rebom
    spec:
      containers:
      - name: rebom-backend-container
        image: registry.relizahub.com/library/rebom-backend
        ports:
        - containerPort: 4000
      volumes:
        - name: migrations-sql
          emptyDir: {}
