plain-kubernetes-yaml/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
  labels:
    app: rebom
spec:
  selector:
    app: rebom
    name: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
